<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
	
    <TextView
        android:id="@+id/choice_title"
        android:layout_width="fill_parent"
        android:textColor="@color/text_color"
        android:layout_height="wrap_content"
        android:text="@string/choice_title"
        android:textSize="20sp" />
     
	<Spinner
    android:id="@+id/player_spinner1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:prompt="@string/spinner_prompt1"
    android:spinnerMode="dialog"/>
	<TextView
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:text="@string/separator"
        android:textSize="50sp" />

	<EditText
	    android:id="@+id/input_label"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="8dip"
	    android:layout_marginRight="8dip"
	    android:hint="@string/edit_text_prompt"
	    android:textColor="@color/text_color"
	    android:textColorHint="@color/text_color" />

	<Button
	    android:id="@+id/submit_choice"
	    android:text="@string/player_choose_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
    
</LinearLayout>
