<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    tools:context="uk.ac.bournemouth.i7244619.Activities.MainMenuActivity" >

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:layout_marginTop="20dp"
		android:gravity="center_horizontal"
        android:text="@string/app_title"
        android:textColor="@color/text_color"
        android:textSize="50sp"
        android:textStyle="bold" />



            <Button
                android:id="@+id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                style="@style/ButtonBattleshipTheme"
                android:text="@string/quick_game_button"
                android:onClick="openQuickGame" />
            <Button
                android:id="@id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				style="@style/ButtonBattleshipTheme"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/play_friend_button"
                android:onClick="openGame" />
            <Button
                android:id="@id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonBattleshipTheme"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/play_computer_game"
                android:onClick="openComputerGame" />
            <Button
                android:id="@id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonBattleshipTheme"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/nav_hiscores"
                android:onClick="openHiscores" />
            <Button
                android:id="@id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonBattleshipTheme"
                android:layout_weight="1"

                android:text="@string/nav_quickscores"
                android:onClick="openQuickScores" />
            


</LinearLayout>
